<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".type_of_service">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="40sp"
            android:textAlignment="center"
            android:fontFamily="@font/pacifico"
            android:textColor="@color/primaryWhiteText"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"/>

        <ImageView
            android:id="@+id/service_on_local"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/store"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recoger_local"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/primaryWhiteText"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:id="@+id/service_address"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/scooter"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_domicilio"
            android:textSize="30sp"
            android:textColor="@color/primaryWhiteText"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selecciona_una"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/primaryWhiteText"
            android:gravity="bottom"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>