<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentMenuPizzas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ColorBackground"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_image"
            android:layout_marginBottom="@dimen/tittle_top_margin"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/MenuPizzaViewImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp" />

            <TextView
                android:id="@+id/MenuPizzaViewCost"
                android:layout_width="79dp"
                android:layout_height="24dp"
                android:layout_alignStart="@+id/MenuPizzaViewImage"
                android:layout_alignLeft="@+id/MenuPizzaViewImage"
                android:layout_alignTop="@+id/MenuPizzaViewImage"
                android:layout_alignEnd="@+id/MenuPizzaViewImage"
                android:layout_alignRight="@+id/MenuPizzaViewImage"
                android:layout_alignBottom="@+id/MenuPizzaViewImage"
                android:layout_marginStart="31dp"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="189dp"
                android:layout_marginEnd="274dp"
                android:layout_marginRight="274dp"
                android:layout_marginBottom="17dp"
                android:background="#4D000000"
                android:textColor="@color/primaryWhiteText"
                android:textSize="@dimen/normaltext_size" />

            <TextView
                android:id="@+id/MenuPizzaViewTittle"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MenuPizzaViewImage"
                android:layout_alignStart="@+id/MenuPizzaViewImage"
                android:layout_alignLeft="@+id/MenuPizzaViewImage"
                android:layout_alignEnd="@+id/MenuPizzaViewImage"
                android:layout_alignRight="@+id/MenuPizzaViewImage"
                android:layout_alignBottom="@+id/MenuPizzaViewImage"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-74dp"
                android:layout_marginEnd="133dp"
                android:layout_marginRight="133dp"
                android:layout_marginBottom="41dp"
                android:background="#4D000000"
                android:text="@string/pizza_ingredients"
                android:textColor="@color/primaryWhiteText"
                android:textSize="@dimen/subtitles_size" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lateral_margin"
            android:text="@string/pizza_ingredients"
            android:textSize="@dimen/subtitles_size" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/tittle_top_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/MenuPizzaViewIngredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lateral_margin"
            android:text="@string/cantidad"
            android:textSize="@dimen/subtitles_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tittle_top_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/PizzaButtonMenos"
                android:layout_width="@dimen/square"
                android:layout_height="@dimen/square"
                android:paddingTop="0dp"
                android:text="-"
                android:textSize="30sp"
                android:theme="@style/RaisedButton" />

            <TextView
                android:id="@+id/PizzaNoCantidad"
                android:layout_width="@dimen/square"
                android:layout_height="@dimen/square"
                android:layout_gravity="center"
                android:background="@color/primaryWhiteText"
                android:text="0"
                android:textAlignment="center"
                android:textSize="30dp" />

            <Button
                android:id="@+id/PizzaButtonMas"
                android:layout_width="@dimen/square"
                android:layout_height="@dimen/square"
                android:layout_gravity="end"
                android:paddingTop="0dp"
                android:text="+"
                android:textSize="30sp"
                android:theme="@style/RaisedButton" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lateral_margin"
            android:text="@string/subtotal"
            android:textSize="@dimen/subtitles_size" />

        <TextView
            android:id="@+id/PizzaSubtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="0"
            android:textSize="@dimen/normaltext_size" />

        <Button
            android:id="@+id/PizzaAgregarOrden"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:gravity="center|bottom"
            android:text="@string/add_order"
            android:textColor="@color/primaryWhiteText"
            android:textSize="20sp"
            android:theme="@style/RaisedButton" />

        <TextView
            android:id="@+id/PizzaRutaImagen"
            android:layout_width="0dp"
            android:layout_height="0dp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>